Java 8 support (#263)
Co-authored-by: hugohills <hugohills@hotmail.com>